<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">My Fm</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="isRTL">false</string>


    <string name="fmUrl">http://prclive1.listenon.in:9948/;</string>

    <string name="facebookLink">https://www.facebook.com/boopathi.k.trainer</string>
    <string name="twitterLink">https://twitter.com/BoopathiTrainer</string>

    <string name="admob_banner_id">ca-app-pub-7980094149798410/2767932719</string>
    <string name="admob_interstitial_id">ca-app-pub-7980094149798410/4627809294</string>

    <string name="play_more_app">https://play.google.com/store/search?q=boopathi kumar</string>

    <string name="statu_barTitle">MY FM</string>
    <string name="toolbar_title">MY FM</string>

    <!--<NavigationDraware and Tab string>-->
    <string name="my_fm">My Fm</string>
    <string name="Share_App">Share App</string>
    <string name="Rate_App">Rate App</string>
    <string name="More_App">More App</string>
    <string name="About_Us">About Us</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="Privacy_Policy">Privacy Policy</string>
    <string name="developed_by">Developed by</string>
    <string name="Viavi_Webtech">Boopathi kumar</string>
    <string name="drawar_appName">MY FM</string>
    <string name="drawar_appSubtitle">Radio Channel</string>
    <!--<NavigationDraware and Tab string>-->

    <!--<about_us.xml string>-->
    <string name="app_name_about_us">My Fm</string>
    <string name="about_us_version">Verson</string>
    <string name="about_us_version_text">1.0.0</string>
    <string name="about_us_author">Author</string>
    <string name="about_us_Company">Company</string>
    <string name="about_us_company_name">w3appinfo.com</string>
    <string name="about_us_email">Email</string>
    <string name="about_us_email_text">appskongu@gmail.com</string>
    <string name="about_us_website">Website</string>
    <string name="about_us_website_text">http://www.w3appinfo.com/</string>
    <string name="about_us_contact">Contact</string>
    <string name="about_us_contact_text">919698548633</string>
    <string name="about_us_about">About</string>
    <string name="about_description">As w3appinfo Webtech is finest offshore IT company which has expertise in the below mentioned all technologies and our professional,
        dedicated approach towards our work has always satisfied our clients as well as users.
        We have reached to this level because of the dedication and hard work of our 10+ years experienced team as well as new ideas of freshers,
        they always provide the best solutions. Here are the promising services served by  w3appinfo.
        Contact on Skype  Email for more information.
        Skype ID: kongu tamil
        Email: appskongu@gmail.com OR appskongu@gmail.com
        Website: http://www.w3appinfo.com/
    </string>
    <!--<about_us.xml string>-->

    <!--<myfm_fragment.xml string>-->
    <string name="radio_fm">Radio FM</string>
    <string name="Recording_Completed">Recording Completed</string>
    <string name="Recording_started">Recording started</string>
    <string name="recording_start">Recording Start</string>
    <string name="recording_complite">Recording Complete</string>
    <string name="timer_end">Time End Stop Fm</string>
    <string name="not_start_fm">Please start radio first</string>
    <string name="textView_stop_timer_myfm">Stop Timer</string>
    <string name="textView_play_myfm">Play</string>
    <string name="textView_pause_myfm">Pause</string>
    <string name="textView_recording_myfm">Recording</string>
    <string name="description_myfm">
       MY FM Android Application is a live radio streaming Application for single station with modern design.
        its very easy to customize yet very powerful and simple app.
        User can enjoy their favorite Radio Station Live with this Android application with their Android device.
        The application is specially optimized to be extremely easy to configure and for that detailed documentation is provided.
    </string>
    <!--<myfm_fragment.xml string>-->

    <!--<dialog.xml string>-->
    <string name="hours">Hours</string>
    <string name="minute">Minute</string>
    <string name="hh">hh</string>
    <string name="mm">mm</string>
    <string name="dialogHading">Set Timer</string>
    <!--<dialog.xml string>-->

    <string name="exit">Exit</string>
    <string name="action_settings">Settings</string>
    <string name="cannot_use_save_permission">can not use recording features</string>
    <string name="Let_me_recommend_you_this_application">Let me recommend you this application</string>
    <string name="Please_click_BACK_again_to_exit">Please click BACK again to exit</string>
    <string name="internet_connection">Internet connection not available</string>
    <string name="internet_connection_message">Internet connection not available check your internet connection</string>
    <string name="cancel_timer">Cancel Timer</string>
    <string name="sure_cancel_timer">Are you sure you want to cancel timer?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>
